--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,20 @@
 .swiper-button-prev {
   margin-left: 90px;
 }
+
+.footer-curved {
+  position: relative;
+  overflow: hidden;
+  background-color: #1c1d20;
+}
+
+.footer-curved::before {
+  background: white;
+  position: absolute;
+  content: "";
+  left:0;
+  right:0;
+  top: -25px;
+  height: 100px;
+  border-radius: 0 0 50% 50%;
+}
