--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   box-shadow: 0 5px 10px 2px rgb(0 0 0 / 0.25);
 }
 
+.buttons-shadow-dark {
+  box-shadow: 0 5px 10px 2px rgb(255 255 255 / 0.6);
+
+}
+
 .swiper-pagination-bullet-active {
   background-color: #1c1d20 !important;
 }
